[project]
name = "duration-pred-serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ynotzort", email = "ynotzort@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "pytest>=8.3.5",
    "scikit-learn==1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "requests>=2.32.3",
]
